# zmk

./: .gitignore  .gitmodules  pyproject.toml  tasks.py
app/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Kconfig  west.yml
app/boards/nice/nice_nano_v2/: Kconfig.nice_nano_v2  board.yml  nice_nano_v2.yaml
app/boards/nicekeyboards/nice_nano/: board.yml  nice_nano.zmk.yml  nice_nano_3_0_0.overlay
app/boards/shields/splitkb_aurora_lily58/: Kconfig.defconfig
app/include/dt-bindings/zmk/: rgb.h
app/include/zmk/: activity.h  battery.h  pm.h  rgb_underglow.h
app/include/zmk/events/: battery_state_changed.h
app/keymap-module/modules/: modules.cmake
app/module/drivers/sensor/battery/: battery_common.c
app/src/: activity.c  battery.c  ble.c  ext_power_generic.c  gpio_key_wakeup_trigger.c  pm.c  rgb_underglow.c  usb.c  wpm.c
app/src/behaviors/: behavior_rgb_underglow.c  behavior_soft_off.c
app/src/display/widgets/: battery_status.c
app/src/split/: central.c  peripheral.c
app/src/split/bluetooth/: central.c
