[tool.poetry]
name = "zmk"
version = "0.1.0"
description = "ZMK keyboard driver"
license = "GPL3"
readme = "README.rst"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
west = "^1.2.0"
gcovr = "^7.2"
clang-format = "^18.1.8"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest = "^8.3.2"
invoke = "^2.2.0"
isort = "^5.13.2"
black = "^24.8.0"
ipython = "^8.26.0"
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
flake8-junit-report = "^2.1.0"
pyelftools = "^0.31"
tomli = "^2.0.1"
gitpython = "^3.1.43"
mock = "^5.1.0"
cryptography = "^43.0.3"
intelhex = "^2.3.0"
cbor = "^1.0.0"
serial = "^0.0.97"
pyserial = "^3.5"
libusb = "1.0.27"
libusb-package = "1.0.26"
pyocd = "^0.36.0"

[build-system]
requires = ["poetry-core", "gitpython"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend_exclude = ''

[tool.isort]
profile = "black"
known_first_party = ["imubar"]
skip = ["__init__.py"]
extend_skip_glob = ["venv", ".venv", "__init__.py"]

[tool.pytest.ini_options]
mock_use_standalone_module = true
testpaths = ["tests/imubar"]
addopts = """\
    --cov-report=term-missing:skip-covered \
    --cov-report=html \
    --cov-report=xml \
    """
filterwarnings = [
    "ignore:The hookimpl CovPlugin:DeprecationWarning"
]

[tool.coverage.run]
source = ["imubar"]
branch = true
omit = []

[tool.coverage]
html = { directory = "build/reports/coverage-html"}
xml = { output = "build/reports/coverage.xml"}
